labs/codebuild-web-app/cfn-templates/codebuild.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "Codebuild Web App"

Resources:
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsHostnames: true
      Tags:
        - Key: "Name"
          Value: "Codebuild - VPC"

  PublicSubnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.0.0.0/24"
      Tags:
        - Key: "Name"
          Value: "Codebuild Public Subnet"

  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
        - Key: "Name"
          Value: "Internet Gateway"

  AttachGateway:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: "Name"
          Value: "Codebuild Public Route Table"

  PublicRoute:
    Type: "AWS::EC2::Route"
    DependsOn: "AttachGateway"
    Properties:
      RouteTableId: !Ref PublicRouteTable
      GatewayId: !Ref InternetGateway
      DestinationCidrBlock: "0.0.0.0/0"

  PublicSubnetRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  PublicSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      VpcId: !Ref VPC
      GroupDescription: "Allow SSH"
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: "22"
          ToPort: "22"
          CidrIp: "0.0.0.0/0"
      Tags:
        - Key: Name
          Value: Public

  CodeBuildRole:
    Type: "AWS::IAM::Role"
    Properties:
      RoleName: "CodeBuildRole"
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service: "codebuild.amazonaws.com"
            Action: "sts:AssumeRole"
      Policies:
        - PolicyName: "CodeBuildPolicy"
          PolicyDocument: |
            {
              "Version": "2012-10-17",
              "Statement": [
                {
                  "Sid": "CloudWatchLogsPolicy",
                  "Effect": "Allow",
                  "Action": [
                    "logs:CreateLogGroup",
                    "logs:CreateLogStream",
                    "logs:PutLogEvents"
                  ],
                  "Resource": "*"
                },
                {
                  "Sid": "CodeBuildPolicy",
                  "Effect": "Allow",
                  "Action": [
                    "codebuild:CreateReportGroup"
                  ],
                  "Resource": "*"
                },
                {
                  "Sid": "S3GetObjectPolicy",
                  "Effect": "Allow",
                  "Action": [
                    "s3:GetObject",
                    "s3:GetObjectVersion"
                  ],
                  "Resource": "*"
                },
                {
                  "Sid": "S3PutObjectPolicy",
                  "Effect": "Allow",
                  "Action": [
                    "s3:PutObject"
                  ],
                  "Resource": "*"
                },
                {
                  "Sid": "S3BucketIdentity",
                  "Effect": "Allow",
                  "Action": [
                    "s3:GetBucketAcl",
                    "s3:GetBucketLocation"
                  ],
                  "Resource": "*"
                },
                {
                  "Sid": "CreateReportPolicy",
                  "Effect": "Allow",
                  "Action": "codebuild:CreateReport",
                  "Resource": "*"
                },
                {
                  "Effect": "Allow",
                  "Action": [
                      "codebuild:BatchPutTestCases",
                      "codebuild:UpdateReport"
                  ],
                  "Resource": "*"
                }
              ]
            }

  CodeBuildProject:
    Type: "AWS::CodeBuild::Project"
    Properties:
      Name: "codebuild-web-app"
      Description: "CodeBuuld Project for Introduction"
      ServiceRole: !GetAtt CodeBuildRole.Arn
      Artifacts:
        Type: "NO_ARTIFACTS"
      Environment:
        Type: "LINUX_CONTAINER"
        ComputeType: "BUILD_GENERAL1_SMALL"
        Image: "aws/codebuild/amazonlinux2-x86_64-standard:5.0"
      Source:
        Type: "NO_SOURCE"
        BuildSpec: |
          version: 0.2
          phases:
            install:
              runtime-versions:
                python: 3.8
            build:
              commands:
                - echo "Hello, World!"
                
      TimeoutInMinutes: 30
      LogsConfig:
        CloudWatchLogs:
          Status: "ENABLED"
          GroupName: "CodeBuildLogs"
          StreamName: "CodeBuildStream"

      ConcurrentBuildLimit: 1
